[package]
name = "dnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["env", "derive"] }
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["full"] }
