[package]
name = "dnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["env", "derive"] }
dashmap = { version = "5.5.3", features = ["serde"] }

rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
