[package]
name = "dnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
clap = { version = "4.4.11", features = ["env", "derive"] }
clap-verbosity-flag = "2.1.1"
dashmap = { version = "5.5.3", features = ["serde"] }

rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
