[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive", "env"] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
thiserror = "1.0.51"
tokio = { version = "1.35.0", features = ["full"] }
